[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/fonts/item_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/prefabs/Textbar.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/scenes/login/page_login.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
expand_margin_left = 4.0
expand_margin_right = 4.0
expand_margin_top = 4.0
expand_margin_bottom = 4.0

[node name="Login" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -752, -272 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inputs" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Username" parent="Inputs" instance=ExtResource( 2 )]
margin_left = 273.0
margin_top = 485.0
margin_right = 769.0
margin_bottom = 578.0

[node name="Tip" parent="Inputs/Username" index="0"]
text = "Username"

[node name="Password" parent="Inputs" instance=ExtResource( 2 )]
margin_left = 279.0
margin_top = 642.0
margin_right = 785.0
margin_bottom = 734.0

[node name="Tip" parent="Inputs/Password" index="0"]
text = "Password"

[node name="Buttons" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Login" type="Button" parent="Buttons"]
margin_left = 392.0
margin_top = 837.0
margin_right = 658.0
margin_bottom = 917.0
custom_fonts/font = ExtResource( 1 )
custom_styles/normal = SubResource( 1 )
text = "Login"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateAccount" type="Button" parent="Buttons"]
margin_left = 309.0
margin_top = 977.0
margin_right = 733.0
margin_bottom = 1057.0
custom_fonts/font = ExtResource( 1 )
custom_styles/normal = SubResource( 1 )
text = "Create Account"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Profile_Settings" type="Control" parent="."]
visible = false
margin_right = 571.0
margin_bottom = 1034.0

[node name="Logout" type="Button" parent="Profile_Settings"]
margin_left = 147.0
margin_top = 816.0
margin_right = 413.0
margin_bottom = 896.0
custom_fonts/font = ExtResource( 1 )
custom_styles/normal = SubResource( 1 )
text = "Logout"

[connection signal="visibility_changed" from="." to="." method="_on_Login_visibility_changed"]
[connection signal="pressed" from="Buttons/Login" to="." method="_on_Login_pressed"]
[connection signal="pressed" from="Buttons/CreateAccount" to="." method="_on_CreateAccount_pressed"]
[connection signal="pressed" from="Profile_Settings/Logout" to="." method="_on_Logout_pressed"]

[editable path="Inputs/Username"]
[editable path="Inputs/Password"]
